--- a/src/app/videochat/videochat.component.html
+++ b/src/app/videochat/videochat.component.html
@@ -1,1 +1,4 @@
-<iframe src="https://tokbox.com/embed/embed/ot-embed.js?embedId=469335ba-1988-488e-903f-d92526a746f8&room=DEFAULT_ROOM&iframe=true" width="800px" height="640px" ></iframe>
+<div style = "background-color:green;">
+<iframe src="https://tokbox.com/embed/embed/ot-embed.js?embedId=469335ba-1988-488e-903f-d92526a746f8&room=abccde
+ &iframe=true" width=800 height=640 ></iframe>
+</div>
